--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+*.pdb
+*.dll
+*.ide-wal
+*.ide-shm
+*.ide
+*.suo
+.vs/MVC/v15/Server/sqlite3/db.lock
+*.cache
 
 
 # The following command works for downloading when using Git for Windows:
@@ -16,10 +24,15 @@
 
 # Build results
 [Dd]ebug/
+[Dd]ebugPublic/
 [Rr]elease/
+[Rr]eleases/
 x64/
+x86/
+bld/
 [Bb]in/
 [Oo]bj/
+[Ll]og/
 # build folder is nowadays used for build scripts and should not be ignored
 #build/
 
